# application_bot

./: .env.example  .gitignore  Dockerfile  README.md  app.py  bot.py  fly.toml  main.py  proxies.json  pyproject.toml  users.db
routers/: admin_router.py  command_router.py  request_router.py  white_list_router.py
shared/: callbacks.py  config.py  data.py  enums.py  filters.py  funcs.py  keyboards.py  send_request_to_form.py  task_manager.py
